tests/ui/lang-items/start_lang_item_args.main_args.stderr
error[E0308]: lang item `start` function has wrong type
  --> $DIR/start_lang_item_args.rs:65:1
   |
LL | fn start<T>(_main: fn(i32) -> T, _argc: isize, _argv: *const *const u8, _sigpipe: u8) -> isize {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected signature `fn(fn() -> _, _, _, _) -> _`
              found signature `fn(fn(i32) -> _, _, _, _) -> _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
